restructured nav area to include logo

--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -7,13 +7,10 @@
 
 <body id="index" class="home">
 
-    <!-- Logo -->
-    <header id="banner" class="body">
-            <h1><a href="{{ SITEURL }}/">{{ SITENAME }} <strong>{{ SITESUBTITLE }}</strong></a></h1>
-    </header><!-- /#banner -->
-    <!-- End Logo -->
 
-    {% include '_nav.html' %}
+    {% include 'nav_area/logo.html' %}
+    
+    {% include 'nav_area/_nav.html' %}
 
 
     {# {% include '_test.html' %} #}
