--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -8,7 +8,7 @@
 <body id="index" class="home">
 
 
-    {% include 'nav_area/logo.html' %}
+    {% include 'nav_area/_logo.html' %}
     
     {% include 'nav_area/_nav.html' %}
 
