--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -65,8 +65,9 @@ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ========================================================================== */
 
 /* -----------------------------------------------------------------------
-		
+		 NAV
 -------------------------------------------------------------------------- */
+@import 'nav/manifest';
 
 
 /* -----------------------------------------------------------------------
