--- a/app/theme/templates/nav_area/_logo.html
+++ b/app/theme/templates/nav_area/_logo.html
@@ -1,5 +1,4 @@
-    <!-- Logo -->
-    <header id="banner" class="body">
-            <h1><a href="{{ SITEURL }}/"><img src = "images/logo.svg" alt = "Michael Appuhn logotype" /></a></h1>
-    </header><!-- /#banner -->
-    <!-- End Logo -->
+    
+    <header class="logo">
+        <a href="{{ SITEURL }}/"><img src = "/images/logo.svg" alt = "Michael Appuhn logotype" /></a>
+    </header>
