--- a/app/theme/templates/nav_area/_nav.html
+++ b/app/theme/templates/nav_area/_nav.html
@@ -1,6 +1,6 @@
 {% block nav %}
     <!-- Nav -->
-    <nav id="menu"><ul>
+    <nav class="navigation"><ul>
 
     {% for title, link in MENUITEMS %}
         <li><a href="{{ link }}">{{ title }}</a></li>
