Wrapped content div in base file for persistance. Copy-pasted current bobo-site text.

--- a/app/sass/settings/_typography.scss
+++ b/app/sass/settings/_typography.scss
@@ -2,12 +2,16 @@
   font-family: 'NeuzeitBook';
   src: url("/theme/type/NeuzeitBook.otf");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; 
+  }
+
 @font-face {
   font-family: 'NeuzeitBold';
   src: url("/theme/type/NeuzeitHeavy.otf");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; 
+}
+
 /*
 //	src:url('fonts/font-name.eot');
 //	src:url('fonts/font-name.eot?#iefix') format('embedded-opentype'),
