--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -15,8 +15,10 @@
 
     {# {% include '_test.html' %} #}
 
-    {% block content %}
-    {% endblock %}
+    <section class="content">
+        {% block content %}
+        {% endblock %}
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
