--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -65,33 +65,35 @@ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ========================================================================== */
 
 /* -----------------------------------------------------------------------
+			UI ELEMENTS
+-------------------------------------------------------------------------- */
+@import 'ui-elements/manifest';
+
+
+/* -----------------------------------------------------------------------
 		 NAV
 -------------------------------------------------------------------------- */
 @import 'nav/manifest';
 
 
 /* -----------------------------------------------------------------------
+		CONTENT
 -------------------------------------------------------------------------- */
+@import 'content/manifest';
+
 
 
 /* -----------------------------------------------------------------------
 -------------------------------------------------------------------------- */
 
+/* =======================================================================
+		PAGES
+========================================================================== */
 
 /* -----------------------------------------------------------------------
+		HOMEPAGE
 -------------------------------------------------------------------------- */
-
-
-/* -----------------------------------------------------------------------
--------------------------------------------------------------------------- */
-
-
-/* -----------------------------------------------------------------------
--------------------------------------------------------------------------- */
-
-
-/* -----------------------------------------------------------------------
--------------------------------------------------------------------------- */
+@import 'homepage/manifest';
 
 
 /* -----------------------------------------------------------------------
