--- a/app/sass/nav/_mobile.scss
+++ b/app/sass/nav/_mobile.scss
@@ -1,53 +1,34 @@
 @media only screen and (min-width: $mobileWidth) {
 
-	/* ==============
-	    LOGO
-	   ============== */
+/* -------------------- Logo -------------------- */
 	.logo {
-		display: block;
-		width: 150px;
-		margin: 20px auto;
+		@include mobileWidth();
+		margin: 2vh auto ;
+		text-align: center;
 	}
 
 
-
-	/* ==============
-	    NAV
-	   ============== */
-
+/* -------------------- Navigation -------------------- */
 	.navigation{
 		display: block;
-        min-width: 200px;
-        max-width: 300px;
         margin: auto;
 	}
 
-	nav ul {
+	.navigation ul {
 	    margin: 0;
 	    padding: 0;
 	    list-style-type: none;
 
 	}
 
-	nav a {
-	    display: block;
-	    margin-bottom: 10px;
-	    padding: 15px 0;
+	.navigation a {
+		@include cta-link();
 
-	    text-align: center;
-	    text-decoration: none;
-	    font-weight: bold;
-
-	    color: white;
-	    background: $color2;
 	}
 
-	nav a:hover,
-	nav a:visited {
-	    color: white;
-	}
 
-	nav a:hover {
-	    background-color: $color3;
+	.navigation a:hover {
+	   @include cta-hover();
 	}	
+
 }
