fixed the header and spacing up a bit.

--- a/app/sass/homepage/_manifest.scss
+++ b/app/sass/homepage/_manifest.scss
@@ -1,3 +1,9 @@
 /* homepage _manifest */
 
-@import 'mobile';
+@media only screen and (min-width: $mobileWidth) {
+	@import 'mobile';
+}
+
+@media only screen and (min-width: $tabletWidth) {
+	@import 'tablet';
+}
