--- a/app/sass/homepage/_tablet.scss
+++ b/app/sass/homepage/_tablet.scss
@@ -1,9 +1,9 @@
-/* homepage/_mobile.scss */
+/* homepage/_tablet.scss */
 
 .homepage-hi{
-	font-size: 50vw;
+	font-size: 30vw;
 	line-height: 1em;
-	margin: 40px auto;
+	margin: 20px auto;
 	text-align: center;
 	color: $color3;
 }
