--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -10,7 +10,9 @@
 
     {% include 'nav_area/_logo.html' %}
     
-    {% include 'nav_area/_nav.html' %}
+    {#  COMMENTING OUT FOR NOW
+        {% include 'nav_area/_nav.html' %}
+    #}
 
 
     {# {% include '_test.html' %} #}
