--- a/app/sass/nav/_tablet.scss
+++ b/app/sass/nav/_tablet.scss
@@ -6,7 +6,10 @@
 /* -------------------- Logo -------------------- */
 
 	.logo {
-        @include mobileWidth();
+        width: auto;
+        margin: 0;
+        padding-left: 2vh;
+        padding-top: 2ch;
         text-align: left;
 
 	}
