changed the play green to brand blue

--- a/app/sass/settings/_variables.scss
+++ b/app/sass/settings/_variables.scss
@@ -7,7 +7,7 @@ $backgroundColor: #000;
 /* Pallate */
 $color1: #fff;
 $color2: #e44d26;
-$color3: #0f0;
+$color3: #3a32de;
 $color4: #0f0;
 
 /* ************************************************ 
