fixed paragraph width on mobile, edited tumblr link (oops)

--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -5,6 +5,6 @@
 
 	<p>Hi there! I'm a digital designer, currently focusing on UX for ecommerce brands. I'm a member of the <a href="http://othercreative.co">Other Creative</a> partnership. </p>
 
-	<p>Reach me via email at <a href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>. Follow me on <a href="https://twitter.com/michaelappuhn">Twitter</a>, <a href="https://instagram.com/michaelappuhn">Instagram</a>, <a href="https://michaelappuh.tumblr.com">Tumblr</a>.</p>
+	<p>Reach me via email at <a href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>. Follow me on <a href="https://twitter.com/michaelappuhn">Twitter</a>, <a href="https://instagram.com/michaelappuhn">Instagram</a>, <a href="https://michaelappuhn.tumblr.com">Tumblr</a>.</p>
 	
 {% endblock content %}
