--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h2 class="homepage-hi">Hi!</h2>
+	<h2 class="homepage-hi">&lsquo;ey</h2>
 
 	<p>Hi there! I'm a digital designer, currently focusing on UX for ecommerce brands. I'm a member of the <a href="http://othercreative.co">Other Creative</a> partnership. </p>
 
