added viewport meta tag duh

--- a/app/theme/templates/head/_head.html
+++ b/app/theme/templates/head/_head.html
@@ -1,6 +1,7 @@
 {% block head %}
 <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% include 'head/_feed.html' %}
 
