brought in the basics of a three js thing from a sketch

--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -6,7 +6,8 @@
 </head>
 
 <body id="index" class="home">
-
+<script src="theme/js/three.min.js"></script>
+<script src="theme/js/cube.js"></script>
 
     {% include 'nav_area/_logo.html' %}
     
