Changed the legibility of the text to reflect the new background

--- a/app/sass/nav/_mobile.scss
+++ b/app/sass/nav/_mobile.scss
@@ -3,7 +3,7 @@
 /* -------------------- Logo -------------------- */
 	.logo {
 		@include mobileWidth();
-		margin: 2vh auto ;
+		padding: 2vh auto ;
 		text-align: center;
 	}
 
