--- a/app/theme/static/css/style.css
+++ b/app/theme/static/css/style.css
@@ -296,7 +296,7 @@ td, th {
 /*! Pulled from HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 /* line 3, ../../../sass/settings/_global.scss */
 html {
-  color: #222;
+  color: #fff;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -358,18 +358,31 @@ textarea {
 /* line 56, ../../../sass/settings/_global.scss */
 body {
   font: 16px/26px "NeuzeitBook", Helvetica, Helvetica Neue, Arial;
+  background-color: #3a32de;
+}
+
+/* line 61, ../../../sass/settings/_global.scss */
+a:link, visited {
+  color: #e44d26;
+  text-decoration: none;
+}
+
+/* line 66, ../../../sass/settings/_global.scss */
+a:hover, active {
+  color: #e44d26;
+  text-decoration: underline;
 }
 
 /* ==========================================================================
    HELPER CLASSES
    ========================================================================== */
-/* line 67, ../../../sass/settings/_global.scss */
+/* line 78, ../../../sass/settings/_global.scss */
 .hidden {
   display: none !important;
   visibility: hidden;
 }
 
-/* line 72, ../../../sass/settings/_global.scss */
+/* line 83, ../../../sass/settings/_global.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -381,7 +394,7 @@ body {
   width: 1px;
 }
 
-/* line 83, ../../../sass/settings/_global.scss */
+/* line 94, ../../../sass/settings/_global.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -392,24 +405,24 @@ body {
   width: auto;
 }
 
-/* line 93, ../../../sass/settings/_global.scss */
+/* line 104, ../../../sass/settings/_global.scss */
 .invisible {
   visibility: hidden;
 }
 
-/* line 97, ../../../sass/settings/_global.scss */
+/* line 108, ../../../sass/settings/_global.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
   display: table;
 }
 
-/* line 103, ../../../sass/settings/_global.scss */
+/* line 114, ../../../sass/settings/_global.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* line 107, ../../../sass/settings/_global.scss */
+/* line 118, ../../../sass/settings/_global.scss */
 .clearfix {
   *zoom: 1;
 }
@@ -433,7 +446,7 @@ body {
   /* line 4, ../../../sass/nav/_mobile.scss */
   .logo {
     width: 90%;
-    margin: 2vh auto;
+    padding: 2vh auto;
     text-align: center;
   }
 
