Changed text styling, and rotated the logo

--- a/app/sass/homepage/_mobile.scss
+++ b/app/sass/homepage/_mobile.scss
@@ -3,9 +3,9 @@
 .homepage-hi{
 	font-size: 50vw;
 	line-height: 1em;
-	margin: 40px auto;
+	margin: 20vh auto 10vh;
 	text-align: center;
-	color: $color3;
+	color: $color1;
 }
 
 canvas {
