--- a/app/sass/homepage/_tablet.scss
+++ b/app/sass/homepage/_tablet.scss
@@ -3,8 +3,7 @@
 .homepage-hi{
 	font-size: 30vw;
 	line-height: 1em;
-	margin: 20px auto;
+	margin: 20vh auto 20px ;
 	text-align: center;
-	color: $color3;
 }
 
