--- a/app/sass/settings/_global.scss
+++ b/app/sass/settings/_global.scss
@@ -58,7 +58,7 @@ body {
     background-color: $color3;
 }
 
-a:link, visited {
+a:link, a:visited {
     color: $color2;
     text-decoration: none;
 }
