--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -559,7 +559,7 @@ a:hover, active {
   .homepage-hi {
     font-size: 50vw;
     line-height: 1em;
-    margin: 20vh auto 10vh;
+    margin: 20vh auto 6vh;
     text-align: center;
     color: #fff;
   }
@@ -575,6 +575,8 @@ a:hover, active {
     font-size: 1.2em;
     line-height: 1.6em;
     margin-top: .8em;
+    max-width: 420px;
+    text-align: center;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -583,7 +585,6 @@ a:hover, active {
   .homepage-hi {
     font-size: 30vw;
     line-height: 1em;
-    margin: 20vh auto 20px;
     text-align: center;
   }
 }
