I was rendering the type like a dummy, using fake bolds

--- a/app/sass/homepage/_mobile.scss
+++ b/app/sass/homepage/_mobile.scss
@@ -2,6 +2,8 @@
 
 .homepage-hi{
 	font-size: 50vw;
+	font-weight: normal	;
+	font-family: NeuzeitBold;
 	line-height: 1em;
 	margin: 20vh auto 6vh;
 	text-align: center;
