Changed the navigation angle because that was a bit too goofy

--- a/app/sass/nav/_mobile.scss
+++ b/app/sass/nav/_mobile.scss
@@ -4,16 +4,11 @@
 	.logo {
 		max-width: 300px;
 		position: relative;
-		top: 50px;
-		left: 10px;
+		top: 20px;
+		left: 20px;
 	}
 
-	.logo img
-	{
-
-		transform: rotate(-35deg);
-	}
-
+	// .logo img {}
 
 /* -------------------- Navigation -------------------- */
 	.navigation{
