--- a/app/sass/nav/_tablet.scss
+++ b/app/sass/nav/_tablet.scss
@@ -8,6 +8,10 @@
 	.logo {
         margin: 0;
 
+        h1{
+            font-size : 1.4em;
+        }
+
 	}
 
 /* -------------------- Navigation -------------------- */
