--- a/app/sass/homepage/_tablet.scss
+++ b/app/sass/homepage/_tablet.scss
@@ -1,8 +1,13 @@
 /* homepage/_tablet.scss */
 
-.homepage-hi{
-	font-size: 30vw;
-	line-height: 1em;
-	text-align: center;
+.short-description{
+	font-size: 6em;
+	line-height: 1.2em;
+	text-align: left;
+	margin: 10vh 0 6vh ;
+	//max-width: 950px;
 }
 
+.home p {
+    text-align: left;
+}
