--- a/app/sass/nav/_mobile.scss
+++ b/app/sass/nav/_mobile.scss
@@ -6,6 +6,16 @@
 		position: relative;
 		top: 20px;
 		left: 20px;
+
+		h1{
+			display: inline;
+			font-size: 1.2em;
+			font-family: NeuzeitBold;
+			color: $color2;
+			border-bottom: .3em solid $color2;
+			padding-bottom: .5em;
+			width: 100%;
+		}
 	}
 
 	// .logo img {}
