--- a/app/theme/templates/nav_area/_logo.html
+++ b/app/theme/templates/nav_area/_logo.html
@@ -1,4 +1,4 @@
     
     <header class="logo">
-        <a href="{{ SITEURL }}/"><img src = "/images/logo.svg" alt = "Michael Appuhn logotype" /></a>
+        <h1>Michael Appuhn</h1>
     </header>
