--- a/app/sass/nav/_mobile.scss
+++ b/app/sass/nav/_mobile.scss
@@ -2,10 +2,14 @@
 
 /* -------------------- Logo -------------------- */
 	.logo {
-		max-width: 300px;
+		@include mobileWidth();
+		margin: 0 auto;
+		padding-top: 4vh;
+		/*
 		position: relative;
 		top: 20px;
 		left: 20px;
+		*/
 
 		h1{
 			display: inline;
