--- a/app/sass/nav/_tablet.scss
+++ b/app/sass/nav/_tablet.scss
@@ -7,6 +7,8 @@
 
 	.logo {
         margin: 0;
+        @include tabletWidth();
+        margin: 0 auto;
 
         h1{
             font-size : 1.4em;
