added three.js CDN link, and commented out my fallback

--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -10,7 +10,8 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --> 
-<script src="theme/js/three.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
+<!--<script src="theme/js/three.min.js"></script>-->
 <script src="theme/js/cube.js"></script>
 
     {% include 'nav_area/_logo.html' %}
