--- a/app/theme/templates/head/_head.html
+++ b/app/theme/templates/head/_head.html
@@ -9,6 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+<link rel="shortcut icon" href="theme/icon.ico" /> 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
